--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,11 @@ body::-webkit-scrollbar {
 	display: none;
 }
 
+body {
+	background: rgb(60,96,97);
+	background: linear-gradient(0deg, rgba(60,96,97,1) 0%, rgba(52,63,86,1) 100%);
+}
+
 a {
 	text-decoration: none;
 }
@@ -31,7 +36,7 @@ a {
 /*HEADER*/
 header {
 	height: 80px;
-	background-color: var(--secondary-color);
+	/*background-color: var(--secondary-color);*/
 }
 
 h1 {
@@ -63,6 +68,7 @@ main {
 h2 {
 	width: 250px;
 	margin: 20px 0 0 20px;
+	color: var(--white);
 }
 
 .cardsContainer {
@@ -76,6 +82,7 @@ h2 {
 	width: 300px;
 	/*max-height: 350px;*/
 	padding: 10px;
+	background-color: var(--white);
 	border-radius: var(--border-radius);
 	-webkit-box-shadow: 0px 0px 27px 8px rgba(0,0,0,0.3); 
 	box-shadow: 0px 0px 27px 8px rgba(0,0,0,0.3);
