--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,19 +104,29 @@ img {
 
 }
 
-.card--favBtn {
+.favBtn {
 	width: 30px;
 	height: 30px;
 	color: var(--white);
-	font-size: 10px;
+	font-size: 12px;
 	position: absolute;
 	right: 10px;
 	bottom: 10px;
 	border-radius: 50%;
 	outline-offset: 3px;
-	outline: 1px solid var(--primary-color);
-	background-color: var(--primary-color);
+	outline: 1px solid;
 	border-color: transparent;
+}
+
+.favBtn--red {
+	outline-color: var(--primary-color);
+	background-color: var(--primary-color);
+}
+
+.favBtn--green {
+	color: #0b0b0b;
+	outline-color: #4caf50;
+	background-color: #4caf50;
 }
 
 .loadRandom--btn {
@@ -175,7 +185,7 @@ footer {
 }
 
 @media (hover: hover) {
-	.card--favBtn:hover {
+	.favBtn:hover {
 		cursor: pointer;
 		opacity: .6;
 	}
